# LuenbergerObserver

./: .gitignore  .travis.yml  CMakeLists.txt  LuenbergerObserver.sln  LuenbergerObserver.vcxproj  LuenbergerObserver.vcxproj.filters  LuenbergerSharp.sln  README.md  main.c  test.csv
LuenbergerSharp/: LuenbergerSharp.csproj  Program.cs  packages.config
LuenbergerSharp/Properties/: AssemblyInfo.cs
luenberger/: luenberger_observer.c  luenberger_observer.h
src/: main.c
src/luenberger/: luenberger_observer.c  luenberger_observer.h
src/utils/: matrix.h
utils/: matrix.c  matrix.h
